syntax = "proto3";

package api;

option go_package = "github.com/psviderski/uncloud/internal/machine/api/pb";

import "google/protobuf/empty.proto";
import "internal/machine/api/pb/machine.proto";

service Cluster {
  rpc AddMachine(AddMachineRequest) returns (AddMachineResponse);
  rpc ListMachines(google.protobuf.Empty) returns (ListMachinesResponse);
}

message AddMachineRequest {
  string name = 1;
  NetworkConfig network = 2;
}

message AddMachineResponse {
  MachineInfo machine = 1;
}

message ListMachinesResponse {
  repeated MachineInfo machines = 1;
}
